Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -479,7 +479,7 @@
  NOT_CREATED:0 "§g未作成§!"
  EMBRACEMENT_RATIO:0 "全$NUM_PROVINCES$州中$NUM_EMBRACED|Y$州で採用しており、$COUNTRY_ADJ$の開発（自治率により$TOTAL_DEV|Y$）合計の$VAL|Y$です。"
  EMBRACE_RATIO2:0 "次の州では$NAME$を採用しておらず、追加コストが発生しています：\n"
- EMBRACE_RATIO_PROV:0 "$PROV$ $COST|Y$¤のコスト（$DEV$開発）\n"
+ EMBRACE_RATIO_PROV:0 " $PROV$ $COST|Y$¤（開発値$DEV$）\n"
  EMBRACE_RATIO3:0 "（その他$NUM$州から$COST|Y$¤のコスト）\n"
  PRESENCE_IN_COUNTRY:0 "$NAME$における存在"
  HAS_EMBRACED:0 "$INSTITUTION|Y$を採用しています"
@@ -501,7 +501,7 @@
  REM_ACC_CULT_UNREST_DECAY_TIME:0 "この不穏度は$YEARS|Y$年後に消失します。"
  GREAT_POWER_RANK:0 "$COUNTRY$は、列強第§Y#$NUM$§!位です。"
  GREAT_POWER_UNTIL:0 "$COUNTRY$は$DATE|Y$まで列強として残ります。"
- GREAT_POWER_EFF:0 "列強として、次の影響が発生します：\n"
+ GREAT_POWER_EFF:0 "列強として、以下の影響が発生します：\n"
  GREAT_POWER_MUST_BEAT_BECOME:1 "列強になるには$OTHER|Y$の列強スコア$SCORE|Y$を超えなければなりません。\n"
  GREAT_POWER_MUST_BEAT_REMAIN:1 "列強に残るには$OTHER|Y$の列強スコア$SCORE|Y$を超えなければなりません。\n"
  GREAT_POWER_MUST_BEAT_INCREASE:1 "列強ランクを上げるためには$OTHER|Y$の列強スコア$SCORE|Y$を超えなければなりません。\n"
@@ -1203,13 +1203,13 @@
  TRADE_POWER_MAP_TT_EXPL:0 "その州の§Y$PERC$%§!の割合を持つノードに$VAL$の交易力をもたらします。"
  TRADE_GOODS_SIZE:0 "州生産力"
  TRADE_GOODS_SIZE_MODIFIER:0 "州生産力補正"
- WE_EMBARGO:0 "$WHO|Y$は$TARGET|Y$に禁輸を実施しており、次のノードの彼らの最大の力が所定の割合だけ減少します。"
+ WE_EMBARGO:0 "$WHO|Y$は$TARGET|Y$に禁輸を実施しており、以下のノードで対象国の力の最大値が一定の割合減少しています。"
  THEY_EMBARGO:0 "$WHO|Y$は$TARGET|Y$によって禁輸を実施されているため、以下のノードで彼らの力の最大値が減少します。"
  THEY_TRANSFER:1 "$WHO|Y$は彼らの交易力の$AMOUNT|Y$を毎月$TARGET|Y$に伝播しており、先月の我々の増加は以下のとおりです："
  THEY_TRANSFER_LIST_ENTRY:0 "\n$NODE|Y$における§Y$VAL$§!"
  CVIEW_PRESTIGE_DESC:0 "威信は多くの事に影響を与えますが、特に他国が自国の要求を受け入れるかどうか、王室間の婚姻が同君連合に発達するかどうかに関わります。"
  CVIEW_PRESTIGE:0 "§Y威信§W\n現在§Y$VALUE$§!（$GAIN$/年間）\n"
- CVIEW_PRESTIGE_AFFECTS:0 "§Y我々の現在の威信からの効果：§W"
+ CVIEW_PRESTIGE_AFFECTS:0 "§Y現在の威信からの効果：§W"
  PEACE_CANNOT_VASSALS:0 "属国を持つ国は併合できません。"
  MONARCHY_WITH_UNION_NOT_CONVERT:0 "同君連合の君主である間は、非君主国になる事はできません。"
  LACK_TECH_FOR_GOV:0 "政府を$GOV$に置き換えるためには、統治技術「§Y$TECH$§!」を研究する必要があります。"
@@ -1338,8 +1338,8 @@
  YOU_LEGITIMACY_LESSER_DESC:0 "同君連合の下位の構成国である間、正統性は上位国の§Y$WHO$§!から得ます。\n"
  THEY_LEGITIMACY_LESSER_DESC:0 "彼らが同君連合の下位の構成国である間、正統性はその上位国の§Y$WHO$§!から得ます。\n"
  CVIEW_LEGITIMACY_DESC:0 "正統性は君主が臣下からどれほど正統であると捉えられているかを示す尺度です。弱い請求権を持つ後継者が王位を継承した際には低い正統性を持つことになります。"
- YOU_LEGITIMACY_AFFECTS:0 "§Yあなたの現在の正統性から：§!"
- THEY_LEGITIMACY_AFFECTS:0 "§Y彼らの現在の正統性から：§!"
+ YOU_LEGITIMACY_AFFECTS:0 "§Y現在の正統性からの効果：§!"
+ THEY_LEGITIMACY_AFFECTS:0 "§Y彼らの現在の正統性からの効果：§!"
  YOU_YEARLY_HORDE_UNITY_NO:0 "§Y遊牧民の結束§!\n現在、あなたの遊牧民の結束に変化はありません。"
  THEY_YEARLY_HORDE_UNITY_NO:0 "§Y遊牧民の結束§!\n現在、あなたの遊牧民の結束に変化はありません。"
  YOU_YEARLY_HORDE_UNITY:0 "§Y遊牧民の結束§!\nあなたの遊牧民の結束は以下の理由により毎年§Y$VALUE$§!変化します：\n"
@@ -1348,7 +1348,7 @@
  YOU_HORDE_UNITY_EFFECTS:0 "§Yあなたの現在の遊牧民の結束からの影響：§!"
  THEY_HORDE_UNITY_EFFECTS:0 "§Y彼らの現在の遊牧民の結束からの影響：§!"
  NO_MIL_COST_MAINT:1 "この指揮官は維持費として§G0§!£mil£のコストがかかります。\n"
- MIL_COST_MAINT:1 "この指揮官は、維持費として毎月$COST|Y$£mil£のコストがかかるでしょう。我々は$CURR|Y$の指揮官を持っており、維持費なしで$ALLOW|Y$の指揮官を持つことができます。\n"
+ MIL_COST_MAINT:1 "この指揮官は、維持費として毎月$COST|Y$£mil£のコストがかかるでしょう。我が国には指揮官が$CURR|Y$人おり、維持費なしで$ALLOW|Y$人持つことができます。\n"
  MODIFIED_BY_TAX_TT:0 "補正x§Y$MOD$§!、以下の理由\n"
  MONTHS_OF_RULING_TRIG_NOT:0 "$WHO$が§Y$MONTHS$§Wヶ月未満統治している。\n"
  MONTHS_OF_RULING_TRIG:0 "$WHO$が§Y$MONTHS$§Wヶ月以上統治している。\n"
@@ -1453,8 +1453,8 @@
  CONVHEIR_AGE:1 "軍を指揮させるには後継者が若すぎます。"
  CONVHEIR_UNION:0 "あなたは同君連合の下位国です。"
  CONVHEIR_ALREADY:0 "あなたの後継者はすでに将軍です。"
- CONVHEIR_IRO:2 "§Yあなたの後継者に軍の指揮権を与える§!\n"
- CONVERT_HEIR_DRO:1 "これは、あなたの後継者を将軍にするでしょう。彼または彼女はあなたの軍隊に命令することができます。あなたの後継者が軍隊を率いることは有益かもしれませんが、将軍は戦場で死ぬ危険性があるので、大きなリスクもあります。"
+ CONVHEIR_IRO:2 "§Y後継者に軍指揮権を付与§!\n"
+ CONVERT_HEIR_DRO:1 "自国の後継者を将軍にします。そうすることで、彼/彼女は軍を指揮できるようになります。後継者が軍を率いることは有益かもしれませんが、将軍は戦死する危険性があるため、大きなリスクもあります。"
  OWN_COUNTRY_CORE:0 "中核化できるのは、あなたが所有している州だけです。"
  NOT_SEIZE_IN_COMBAT:0 "戦闘中に州を奪うことはできません。"
  NOT_CITIES_TO_BE_SEIZED_2:0 "植民地のみ奪うことができます。"
@@ -1574,11 +1574,11 @@
  ENVOY_TRAVELING_DESC:0 "$NAME$は§Y$PROV$§Wへ移動中です。§Y$DATE$§Wに到着します。"
  ENVOY_MISSIONING:0 "$NAME$は現在§Y$PROV$§Wで任務中です"
  ENVOY_WORKING:0 "実行中"
- MISSIONARY_IRO:0 "あなたは合計§Y$TOTAL$§Wの宣教師のうち§Y$CURRENT$§Wを利用可能です。"
- SPIES_IRO:0 "あなたは合計§Y$TOTAL$§Wの諜報員のうち§Y$CURRENT$§Wを利用可能です。"
- DIPLOMAT_IRO:0 "あなたは合計§Y$TOTAL$§Wの外交官のうち§Y$CURRENT$§Wを利用可能です。"
+ MISSIONARY_IRO:0 "計§Y$TOTAL$§W人の宣教師の内§Y$CURRENT$§W人が利用可能です。"
+ SPIES_IRO:0 "計§Y$TOTAL$§W人の諜報員の内§Y$CURRENT$§W人が利用可能です。"
+ DIPLOMAT_IRO:0 "計§Y$TOTAL$§W人の外交官の内§Y$CURRENT$§W人が利用可能です。"
  SETTLER_IRO:0 "あなたは合計§Y$TOTAL$§Wの植民者のうち§Y$CURRENT$§Wを利用可能です。"
- MERCHANT_IRO:0 "あなたは合計§Y$TOTAL$§Wの商人のうち§Y$CURRENT$§Wを利用可能です。"
+ MERCHANT_IRO:0 "計§Y$TOTAL$§W人の商人の内§Y$CURRENT$§W人が利用可能です。"
  HAVE_MORE_THAN_CAVALRY_IN:0 "$PROVINCE$に騎兵が$UNITS$以上いる"
  HAVE_LESS_THAN_CAVALRY_IN:0 "$PROVINCE$に騎兵が$UNITS$未満いる"
  HAVE_MORE_THAN_ARTILLERY_IN:0 "$PROVINCE$に砲兵が$UNITS$以上いる"
@@ -1609,12 +1609,12 @@
  desc_centralisation_modifier:0 "中央集権化の政策は、我々の税収を増加させるだろう。"
  decentralisation_modifier:0 "地方分権"
  desc_decentralisation_modifier:0 "地方分権は、我々の税収に負の影響を持つだろう。"
- MANPOWER_IRO:1 "§Y人的資源§!\n最大値は§Y$MAX$§Wです\n現在、毎月§Y$YEARLY$§W増加します\n陸軍は完全な補充に§Y$NEED$§W人を必要としており、今月は陸軍に§Y$USED$§W人が使用されます。"
+ MANPOWER_IRO:1 "§Y人的資源§!\n最大値は§Y$MAX$§Wです\n現在、毎月§Y$YEARLY$§W人増加します\n陸軍の完全な補充には§Y$NEED$§W人が必要で、今月は§Y$USED$§W人使用されます。"
  MANPOWER_DRO2:0 "§Y$BASE$§Wの最大人的資源は以下に依存します\n"
- MANPOWER_IRO_OTHERS:3 "§Y人的資源§!\n最大値は§Y$MAX$§Wです\n現在、§Y$NAME$§Wの人的資源は毎月§Y$YEARLY$§W増加します\n彼らの陸軍は完全な補充に§Y$NEED$§W人を必要としており、今月は陸軍に§Y$USED$§W人が到着します。"
+ MANPOWER_IRO_OTHERS:3 "§Y人的資源§!\n最大値は§Y$MAX$§Wです\n現在、§Y$NAME$§Wは毎月§Y$YEARLY$§W人獲得します\n彼らの陸軍の完全な補充には§Y$NEED$§W人が必要で、今月は§Y$USED$§W人到着します。"
  SAILOR_MAINT_BASE:0 "基本：$VAL|Y$（$PERC$%）\n"
- SAILORS_IRO:3 "§Y水兵§!\n最大値は§Y$MAX$§Wです。\nあなたは現在、毎月§Y$YEARLY$§Wを得ており、$MAIN|R$の水兵を任務で使用しています。\nあなたの海軍と海兵隊を完全に補強するには§Y$NEED$§Wの水兵が必要であり、今月§Y$USED$§Wが到着するでしょう。\n$FLEET$の艦隊が任務を行っています。"
- SAILORS_IRO_OTHERS:0 "§Y水兵§!\n最大値は§Y$MAX$§Wです\n現在、彼らは毎月§Y$YEARLY$§Wを獲得します\n彼らの海軍の完全な補充に§Y$NEED$§W人の水兵が必要であり、海軍には今月§Y$USED$§W人が到着します"
+ SAILORS_IRO:3 "§Y水兵§!\n最大値は§Y$MAX$§Wです。\n現在、毎月§Y$YEARLY$§W人獲得しており、$MAIN|R$人の水兵を任務で使用しています。\n海軍と海兵隊の完全な補充には§Y$NEED$§W人が必要で、今月は§Y$USED$§W人到着します。\n$FLEET$個艦隊が任務中です。"
+ SAILORS_IRO_OTHERS:0 "§Y水兵§!\n最大値は§Y$MAX$§Wです\n現在、彼らは毎月§Y$YEARLY$§W人獲得します\n彼らの海軍の完全な補充には§Y$NEED$§W人が必要で、今月は§Y$USED$§W人到着します。"
  SAILORS_DRO2:1 "§Y$MAX$§Wの最大水兵は以下に依存します\n"
  POOL_HAS_SAILORS:0 "§Y$POOL$§!の水兵が船の建設を待っているため、予備の水兵は§Y$MAX$§!より大きくなることはありません。"
  SAILORS_SPEED_TT:0 "水兵が回復する速度は、以下の補正を受けます："
@@ -1698,7 +1698,7 @@
  TRADE_LEAGUE_POWER_BONUS:0 "（貿易同盟の一員である：$BONUS$）"
  LEADER_MANEUVER:0 "指揮官（$NAME$）の機動力：§G+$VAL$%§!"
  MAINT_TP_PEN:0 "海軍維持費：$VAL$§!"
- SELECT_LEADER:0 "指揮官は、彼らが率いているユニットに大きなボーナスを加えるでしょう。指揮官のいないユニットは、戦闘で与えるダメージが少なくなり、犠牲者が増えるでしょう。\n\n§Gここをクリックしてこのユニットに指揮官を割り当てます。§!"
+ SELECT_LEADER:0 "指揮官は率いるユニットに大きなボーナスを加えるでしょう。指揮官のいないユニットは、戦闘で与えるダメージが少なくなり、犠牲者が増えるでしょう。\n\n§Gここをクリックしてこのユニットに指揮官を割り当てます。§!"
  SELECT_LEADER_AT_SEA:0 "§Rこの指揮官は海上にいるため再配置することはできません。§!"
  SELECT_LEADER_AT_SEA_OUT_OF_RANGE:0 "§Rこのユニットは供給範囲の外にいるため、その指揮官を再配置することはできません。§!"
  SELECT_LEADER_TARGET_AT_SEA_OUT_OF_RANGE:0 "§R対象のユニットは供給範囲の外にいるため、指揮官を割り当てることはできません。§!"
@@ -1836,7 +1836,7 @@
  CV_WAREX_PROGRESS:0 "現在の戦争疲弊度は§Y$WE$/$MAX$§!です。"
  CV_WAREX_NONE:0 "戦争疲弊はありません。"
  CV_UPRISING_PROGRESS:0 "§Y次の蜂起までの進行度§!\n"
- CV_UPRISING_PROGRESS_DESC:1 "進行度が100%に達すると、この派閥による$SIZE|Y$部隊の反乱軍が蜂起します。進行度はこれらの州の不穏度に応じて、毎月$VAL|%1Y$の確率で§R$INC$%§!増加します。このペースで進むと、次の蜂起は約$YEARS|Y1$年後です。"
+ CV_UPRISING_PROGRESS_DESC:1 "進行度が100%に達すると、この派閥による反乱軍$SIZE|Y$が蜂起します。進行度はこれらの州の不穏度に応じて、毎月$VAL|%1Y$の確率で§R$INC$%§!増加します。このペースで進むと、次の蜂起は約$YEARS|Y1$年後です。"
  CV_UPRISING_PROGRESS_VAL:0 "蜂起の進行度：$VAL|Y1$%"
  CV_REBEL_OCCPROV_DESC:0 "州が反乱軍に占領されました"
  RISE_OF_THE_OTTOMANS:0 "オスマン帝国の台頭"
@@ -2644,10 +2644,10 @@
  ADM_POWER:0 "統治力"
  DIP_POWER:0 "外交力"
  MIL_POWER:0 "軍事力"
- YOU_HAVE_CASH:0 "あなたは§Y$CURRENT$§W¤を持っています"
+ YOU_HAVE_CASH:0 "自国は§Y$CURRENT$§W¤を保有しており"
  THEY_HAVE_CASH:0 "彼らは§Y$CURRENT$§W¤を持っています"
  CASH_IRO:1 "§Y国庫§!\n$YOU_HAVE$、前月の収支は§Y$MONTHLY$§W¤でした。"
- CASH_DRO:1 "これは、軍隊を募集し、顧問を募集し、新しい建物を建てるために利用できる金額です。\n\n§Y前月の結果は以下のとおりでした：§W\n"
+ CASH_DRO:1 "これは、軍の募集・顧問の募集・新しい建造物の建築に利用できる金額です。\n\n§Y前月の結果は以下のとおり：§W\n"
  STAB_IRO:0 "§Y安定度§!\n"
  STAB_DRO:0 "国家の安定度は州の不穏度、及び他の多くに影響を与えます。安定度と拡張のタブで、安定度を向上させることができます。"
  STAB_CURRENT_EFFECTS:0 "\n\n§Y現在の安定度からの効果：§!"
@@ -2842,7 +2842,7 @@
  NO_MORE_BANKLOANS_UNCONDITIONAL:0 "無条件降伏して借金をすることはできません！"
  WE_IMPACT_ON_ANNEX_INTEGRATE:0 "外交併合と統合：$VAL$\n"
  TRIBAL:0 "部族"
- NUM_OF_OWNED_PROVINCES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:2 "あなたやあなたの朝貢国以外の従属国が領有する州（現在：$CURRENT$）"
+ NUM_OF_OWNED_PROVINCES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:2 "の自国か朝貢国以外の従属国が領有する州（現在：$CURRENT$）"
  CONFIRM_ADVISOR_FIRE:0 "§Y$NEW$§!を雇用すると、§Y$OLD$§!を解雇することになります"
  WE_ARE_SUBJECT:0 "我々は$WHO$の従属国です。"
  IS_NOT_SUBJECT_OF:0 "次の従属国ではない"
@@ -2926,9 +2926,9 @@
  CV_REPAY_ALL_LOANS_CONFIRM_TITLE:0 "すべての借金を返済"
  CV_REPAY_ALL_LOANS_CONFIRM_TEXT:0 "$NUM$の借金、合計$VAL|Y2$¤を返済してもよろしいですか？この合計には残りの利息である$FEE|Y2$¤が含まれています。"
  CV_CURRENT_INFLATION:0 "現在のインフレ：$VAL|Y%$§Y%§!"
- CV_AVARAGE_INFLATION:0 "インフレ平均（最後の$TIME$ヶ月）：$VAL|Y%$§Y%§!"
- CV_MAX_INFLATION:0 "最大インフレ（最後の$TIME$ヶ月）：$VAL|Y%$§Y%§!"
- CV_MIN_INFLATION:0 "最小インフレ（最後の$TIME$ヶ月）：$VAL|Y%$§Y%§!"
+ CV_AVARAGE_INFLATION:0 "インフレ平均（直近$TIME$ヶ月）：$VAL|Y%$§Y%§!"
+ CV_MAX_INFLATION:0 "最大インフレ（直近$TIME$ヶ月）：$VAL|Y%$§Y%§!"
+ CV_MIN_INFLATION:0 "最小インフレ（直近$TIME$ヶ月）：$VAL|Y%$§Y%§!"
  EFR_ADJ:0 "東フリースラント"
  EFR_ADJ2:0 "東フリースラント"
  TRADE_TRADE_NODES:0 "交易ノード"
@@ -2951,7 +2951,7 @@
  particularist_rebels_demand:0 "自治の拡大"
  particularist_rebels_demand_desc:0 "分権派は、地方が必要とするものに鈍感な、遠く離れた首都から支配されることにうんざりしている。彼らは地方自治を要求している。"
  nationalist_rebels_demand:0 "$INDEPENDENCE_COUNTRY$の独立"
- nationalist_rebels_demand_desc:0 "分離独立派は$INDEPENDENCE_COUNTRY$の独立を要求している。彼らは$CULTURE$文化の統治者を求めている。"
+ nationalist_rebels_demand_desc:0 "分離独立派は$INDEPENDENCE_COUNTRY$の独立を要求し、統治者は$CULTURE$文化であるべきだと考えている。"
  patriot_rebels_demand:0 "$DEFECT_COUNTRY$への離反"
  patriot_rebels_demand_desc:0 "愛国者たちは我々の不当な占領を軽蔑し、彼らの母国に$DEFECT_COUNTRY$を戻すことを求めている。"
  colonial_rebels_demand:0 "$INDEPENDENCE_COUNTRY$の独立"
@@ -3333,7 +3333,7 @@
  MISSIONARY_TIME:0 "$PROVINCE$が$RELIGION|Y$に改宗するには、およそ$MONTHS|Y0$ヶ月かかります。"
  MISSIONARY_NO_END_DATE:0 "この速度では$NAME$は完全に改宗されることはありません。"
  MISSIONARY_END_DATE:3 "この速度では$NAME$は$DATE|Y$に完全に改宗されます。"
- MISSIONARY_MONTHLY_PROGRESS:0 "布教は以下の要因により、月毎の進行度が$PROGRESS|Y1%$になります："
+ MISSIONARY_MONTHLY_PROGRESS:0 "以下の要因により、月毎の布教進行度は$PROGRESS|Y1%$です："
  MISSIONARY_FULL_STRENGTH:0 "この州の合計布教強度は§Y$VALUE$§!です。"
  GLOBAL_MISSIONARY_STRENGTH:0 "布教強度"
  LOCAL_MISSIONARY_STRENGTH:0 "州の布教強度"
@@ -3486,7 +3486,7 @@
  MACRO_TOO_FEW_MERCS:0 "このひな形の分だけ作成するには傭兵連隊が足りません。"
  MACRO_NO_MONEY:0 "§R建設には$NEEDED|0$¤が必要です。§!"
  MACRO_IN_COMBAT:0 "現在$PROVINCE$で戦闘が行われています。"
- MACRO_OPEN_INTERFACE_TOOLTIP:1 "§Y生産インターフェース§!\nクリックしてユニットを雇用したり建造物を建設します。"
+ MACRO_OPEN_INTERFACE_TOOLTIP:1 "§Y生産インターフェース§!\nユニットの雇用・建造物の建設をします。"
  MACRO_RULES:0 "ルールにより禁止。"
  MACRO_WRONG_MANUFACTORY:0 "工場は$PROVINCE$で生産された品には対応していません。"
  MACRO_IS_COLONY:0 "$PROVINCE$は植民地です。"
@@ -3586,7 +3586,7 @@
  SERVER_BOOKMARK:0 "ブックマーク：$BOOKMARK$"
  SERVER_START_DATE:0 "開始日：$DATE$"
  SERVER_LAUNCHING_MP:0 "*** マルチプレイゲームを起動しています ***"
- CANCEL_BUILDING_PROGRESS:0 "$PROVINCE$における$BUILDING$の建設をキャンセルしますか？キャンセルすると投資の$PERCENTAGE_RETURNED|%1Y$は返還されます。"
+ CANCEL_BUILDING_PROGRESS:0 "$PROVINCE$における$BUILDING$の建設をキャンセルしてもよろしいですか？投資額の$PERCENTAGE_RETURNED|%1Y$が返還されます。"
  NO_SHIPS_IN_PORT:0 "港に味方の艦船がありません。"
  NO_FRIENDLY_TRANSPORT_SHIPS_IN_PORT:0 "港に味方の輸送船がありません。"
  DISCONNECT_TO_SHIP:0 "輸送船から下船します"
@@ -4443,10 +4443,10 @@
  CANT_AFFORD_RIVAL_REMOVE:0 "§R- ライバルを削除するのに必要な§Y$COST$§!£dip£を持っていません。§!"
  NOT_ADD_RIVAL_UNTIL:0 "§R－最近§Y$NAME$§!をライバルから削除することを余儀なくされたため、§Y$DATE$§!までは再度追加することはできません。§!"
  LEDGER_PPROJ:0 "戦力投射"
- EXTRA_BONUS_GOOD_SMALL:0 "少なくとも$MAX$の戦力投射を持っている場合、以下を獲得します：\n"
- EXTRA_BONUS_GOOD_SMALL_FACT:0 "\n少なくとも$VAL|Y$の戦力投射を持っていることにより：\n"
- EXTRA_BONUS_GOOD:0 "少なくとも$MAX$の戦力投射を持っている場合\n +1 £adm£\n +1 £dip£\n +1 £mil£を獲得します"
- EXTRA_BONUS_GOOD_FACT:0 "\n少なくとも$VAL|Y$の戦力投射を持っていることにより："
+ EXTRA_BONUS_GOOD_SMALL:0 "戦力投射を$MAX$以上持っている場合、以下を得ます：\n"
+ EXTRA_BONUS_GOOD_SMALL_FACT:0 "\n戦力投射$VAL|Y$以上のため：\n"
+ EXTRA_BONUS_GOOD:0 "戦力投射を$MAX$以上持っている場合\n +1 £adm£\n +1 £dip£\n +1 £mil£を獲得します"
+ EXTRA_BONUS_GOOD_FACT:0 "\n戦力投射$VAL|Y$以上のため："
  POWERPROJ_GOOD:0 "§G+1§!£adm£\n§G+1§!£dip£\n§G+1§!£mil£"
  POWERPROJ_HOWTO_GAIN:0 "ライバルを打ち負かすことで戦力投射が獲得できます：\n§Y－彼らに対する戦争に参加する。\n－彼らの州を獲得するか彼らを属国化する。\n－彼らを侮辱するか屈辱を与える。\n－彼らの土地で反乱軍を支援する。\n－彼らの商人に対し禁輸する。§!"
  INLAND_BONUS:0 "内陸のボーナス"
@@ -4468,8 +4468,8 @@
  CHACUL_NATIONALISM:0 "あなたは分離主義を持つ州の文化を変更することはできません。"
  CHACUL_NO_ERADICATE:0 "$WHO$が国家として存在している限り、$WHAT$は州から削除することはできません。"
  STUDY_TECHNOLOGY_POWER:0 "技術の学習：§G+$VAL$§!\n"
- MONARCH_POWER_PROJ:0 "少なくとも§Y50§!の戦力投射：§G+$VAL$§!\n"
- power_projection_25:0 "少なくとも§Y25§!の戦力投射"
+ MONARCH_POWER_PROJ:0 "§Y戦力投射50§!以上：§G+$VAL$§!\n"
+ power_projection_25:0 "戦力投射§Y25§!以上"
  NAT_FOCUS_DESC:0 "あなたのナショナルフォーカスは現在この力に設定されており、あなたの§Y$POWER$§!を毎月§G+$VAL$§!増加させています。"
  NAT_FOCUS_NOT_SET_DESC:0 "現在ナショナルフォーカスが設定されていません。"
  NAT_FOCUS_NOT_DESC:0 "あなたのナショナルフォーカスは現在、別の力に設定されており、あなたの§Y$POWER$§!を毎月§R$VAL$§!減少させています。"
@@ -4497,14 +4497,14 @@
  END_OF_ROYAL_STRUGGLE:0 "王室の闘争の終焉"
  pol_zebrzydowski_rebellion_flag:0 "王室の闘争"
  desc_pol_zebrzydowski_rebellion_flag:0 "ポーランドの貴族たちは、権利を縮小しようとする試みに対して武器を取っている。"
- IN_DEBT_BANKRUPT:0 "$WHO$は破産しています"
+ IN_DEBT_BANKRUPT:0 "$WHO$は破産している。"
  IN_DEBT_LOANS_DEFICIT:0 "$WHO$は借金を抱えた上に赤字"
- IN_DEBT_YEARS:0 "$WHO$は$VAL|Y$年間の収入より大きな負債を抱えています"
- SENDGIFT_INDEBT:0 "$REASON$のため贈り物を送ることはできません。"
- OFFERLOAN_INDEBT:0 "$REASON$のため貸付けを提案することはできません。"
- SUBSIDIES_INDEBT:0 "$REASON$のため補助金を送ることはできません。"
- CONDOT_INDEBT:0 "$REASON$の理由により、コンドッティエーリを借りることはできません。"
- SELL_PROV_INDEBT:0 "$REASON$のため州を売却することはできません。"
+ IN_DEBT_YEARS:0 "$WHO$は$VAL|Y$年分の収入より大きな負債を抱えている"
+ SENDGIFT_INDEBT:0 "贈り物を送ることができません。$REASON$"
+ OFFERLOAN_INDEBT:0 "貸付けを提案することができません。$REASON$"
+ SUBSIDIES_INDEBT:0 "補助金を送ることができません。$REASON$"
+ CONDOT_INDEBT:0 "コンドッティエーリを借りることができません。$REASON$"
+ SELL_PROV_INDEBT:0 "州を売却することができません。$REASON$"
  magyar:0 "マジャール"
  NO_DIPLOANNEX_CORE:0 "彼らは、我々が中核化できる近さの中核州を少なくとも一つ持っていなければなりません。"
  perfected_porcelain:0 "完璧な磁器"
@@ -4579,7 +4579,7 @@
  FLEET_BASING_RIGHT:0 "これは$ACTOR$の艦隊が$RECIPIENT$の港を拠点とすることを許可し、また$ACTOR$の交易範囲を拡大するでしょう。"
  OFFER_FLEET_BASING_RIGHT:0 "これは$RECIPIENT$の艦隊が$ACTOR$の港を拠点とすることを許可し、また$RECIPIENT$の交易範囲を拡大するでしょう。"
  LEADER_ASSIGNED_TO_UNIT:0 "この指揮官はすでに$NAME|Y$に割り当てられています。"
- ASSIGNED:0 "割り当てられています"
+ ASSIGNED:0 "配属済"
  RENEW_TAXES_DIALOG_TITLE:0 "戦争税を延長"
  RENEW_TAXES_TITLE_DIALOG_DESC:0 "我々は戦争税の徴収を停止しました。"
  RENEW_WAR_TAXES:0 "あなたは戦争税を延長しますか？"
@@ -4679,8 +4679,8 @@
  LOOT_RECOVERY_DATE:0 "この州は最後に§Y$LAST_LOOT_DATE$§!に略奪されました。再び略奪されない限り§Y$FUTURE_LOOT_DATE$§!に回復を開始し、毎月§G$PERCENTAGE$%§!ずつ回復します。"
  LOOT_CURRENTLY_RECOVERING:0 "この州は現在、毎月§G$PERCENTAGE$%§!回復しています。"
  CURRENT_KARMA:0 "現在のカルマ"
- PEACE_OFFER_POWER_PROJECTION_POS:0 "$TAG$は§G$VAL$§!の戦力投射を獲得します。"
- PEACE_OFFER_POWER_PROJECTION_NEG:0 "$TAG$は§R$VAL$§!の戦力投射を失います。"
+ PEACE_OFFER_POWER_PROJECTION_POS:0 "$TAG$は戦力投射を§G$VAL$§!得ます。"
+ PEACE_OFFER_POWER_PROJECTION_NEG:0 "$TAG$は戦力投射を§R$VAL$§!失います。"
  PEACE_OFFER_TRIBAL_ALLEGIANCE_POS:0 "$TAG$は§G$VAL$§!の部族の忠誠を獲得します。"
  PEACE_OFFER_TRIBAL_ALLEGIANCE_NEG:0 "$TAG$は§R$VAL$§!の部族の忠誠を失います。"
  MUST_RESTART_TO_PLAY_MP:0 "§Rあなたはシングルプレイ画面に入力したか、マルチプレイゲームのホストとなったか、あるいはそれに参加したので、マルチプレイゲームをプレイするにはゲームを再起動する必要があります。§!"
@@ -4758,7 +4758,7 @@
  UPGRADE_SHIPS:0 "§Y船をアップグレード§!"
  MISSION_SETTINGS:0 "ミッションの設定"
  REPAIR_THRESHOLD:0 "修理のしきい値："
- SCORE_GAIN_MODIFIED_BY_DIFFICULTY:0 "スコアは$DIFFICULTY|Y$の難易度により調整されます：$MOD$"
+ SCORE_GAIN_MODIFIED_BY_DIFFICULTY:0 "難易度$DIFFICULTY|Y$によるスコア調整：$MOD$"
  AGGRESSIVENESS:0 "攻撃性："
  MISSION_SETTINGS_DESC:0 "任務を実行しているときの、この艦隊の行動を調整します。"
  REPAIR_ANY_DAMAGE:0 "あらゆる損傷"
@@ -4983,9 +4983,9 @@
  IDEA_NOT_ALLOWED:0 "§R禁止されている§!"
  CORRUPTION_LESS_THAN:1 "汚職が§Y$VAL$%§W未満である。\n"
  CORRUPTION_AT_LEAST:1 "汚職が§Y$VAL$%§W以上である。\n"
- NUM_OF_OWNED_PROVINCES_WITH:2 "領有州（現在：$CURRENT$）で"
+ NUM_OF_OWNED_PROVINCES_WITH:2 "の領有州（現在：$CURRENT$）で"
  NUM_OF_OWNED_STATES_WITH:0 "領有ステートで"
- NUM_OF_OWNED_STATES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:0 "あなたやあなたの朝貢国以外の従属国が領有するステート"
+ NUM_OF_OWNED_STATES_WITH_INCLUDING_NON_SOVEREIGN_SUBJECTS:0 "の自国か朝貢国以外の従属国が領有するステート"
  CV_GO_BANKRUPT_TEXT:4 "破産を宣言することで、すべての借金を帳消しにします。\nこれは、威信と安定度に直接損失を引き起こします。すべての雇用された顧問と傭兵は我々への奉仕から離れ、他国へのいかなる補助金も中止されます。\n破産は、すべての建設の進歩を止め、いたる所に荒廃をもたらすため、我が国を後退させるでしょう。\n$DURATION|Y$年の間、以下のような影響も受けます：\n$EFFECT$$ADDITIONAL_EFFECT$\n\n本当によろしいですか？"
  MISSIONARY_MULTIPLIER:0 "\n速度は以下により乗法で補正されます：\n"
  MISSIONARY_SLIDER:3 "今月の宣教師維持費：§Y-§!$VAL|Y%$"
