--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -96,8 +96,8 @@
  HRE_LEAGUE_CANNOT_JOIN_DESC:0 "以下の理由により、§Y$RELIGION$連盟§!に参加できない："
  HRE_LEAGUE_CANNOT_LEAVE_DESC:0 "以下の理由により、§Y$RELIGION$連盟§!から離脱できない："
  HRE_RELIGION_NO_TREATY:0 "神聖ローマ帝国には、宗教平和に関する盟約はありません。"
- IS_HRE_RELIGION:0 "§Y$RELIGION$§!が、神聖ローマ帝国の支配的な信仰です。"
- IS_NOT_HRE_RELIGION:0 "§Y$RELIGION$§!は、神聖ローマ帝国の支配的な信仰ではありません。"
+ IS_HRE_RELIGION:0 "§Y$RELIGION$§!が神聖ローマ帝国の支配的な信仰である。"
+ IS_NOT_HRE_RELIGION:0 "§Y$RELIGION$§!が神聖ローマ帝国の支配的な信仰ではない。"
  IS_HRE_HERETIC_RELIGION:0 "§Y$RELIGION$§!は、神聖ローマ帝国の非公式な信仰です。"
  IS_NOT_HERETIC_HRE_RELIGION:0 "§Y$RELIGION$§!は、神聖ローマ帝国の非公式な信仰ではありません。"
  HRE_LEAGUE_LEADER_NO_LEAGUE:1 "宗教連盟はありません。"
@@ -165,7 +165,7 @@
  prices.2.a:0 "陶磁器の需要が増大するだろう。"
  JOHAN_FRIEDRICH_BOTTGER:0 "ヨーロッパでの磁器生産"
  prices.3.t:1 "マイセンの磁器"
- prices.3.d:1 "我が国の発明者たちは、貿易商が中国から持ち帰った磁器のサンプルの研究に相当の時間を費やしてきた。彼らは磁器製作の秘密を発見したと断言している。[Root.Owner.Monarch.GetTitle][Root.Owner.Monarch.GetName]に献上された試作品は間違いなく素晴らしい出来であり、大量生産できれば莫大な富をもたらすだろう。発明者たちはいまや我々に磁器工房を立ち上げるのに必要な投資を求めており、その言によれば、ドイツの陶磁器市場を占有することも可能になるという。"
+ prices.3.d:1 "我が国の発明者たちは、貿易商が中国から持ち帰った磁器のサンプルの研究に相当の時間を費やしてきた。彼らは磁器製作の秘密を発見したと断言している。[Root.Owner.Monarch.GetTitle][Root.Owner.Monarch.GetName]に献上された試作品は間違いなく素晴らしい出来であり、大量生産できれば莫大な富をもたらすだろう。発明者たちはいまや我々に磁器工房を立ち上げるのに必要な投資を求めており、その言によればドイツの陶磁器市場を占有することも可能になるという。"
  prices.3.a:1 "陶磁器は富への道となるだろう。"
  PROTESTANT_DONT_EAT_FISH:0 "プロテスタントは魚を食べない"
  prices.4.t:0 "堅固なプロテスタント"
@@ -423,16 +423,16 @@
  LIBERTY_DESIRE_FROM_TEMP:1 "イベント、州の離反、宗主国により開発された州：$VAL$"
  LIBERTY_DESIRE_FROM_TARIFFS:0 "関税：$VAL$"
  LIBERTY_DESIRE_FROM_ROYAL_MARRIAGE:0 "§Y$OVERLORD$§!との王室間の婚姻：$VAL$"
- LIBERTY_DESIRE_FROM_SAME_DYNASTY:0 "§Y$OVERLORD$§!と同じ支配的な王朝：$VAL$"
+ LIBERTY_DESIRE_FROM_SAME_DYNASTY:0 "§Y$OVERLORD$§!と同じ支配王朝：$VAL$"
  LIBERTY_DESIRE_FROM_HORDE:0 "遊牧民である：$VAL$"
  LIBERTY_DESIRE_FROM_LARGE_VASSAL:0 "総開発度が§Y$AMT$§!以上である：$VAL$"
  LIBERTY_DESIRE_FROM_GREAT_POWER_VASSAL:0 "総開発度が§Y$AMT$§!以上である：$VAL$"
  LIBERTY_DESIRE_FROM_SUBJECT_TYPE:0 "$SUBJECT_TITLE$である：$VAL$"
  LIBERTY_DESIRE_FROM_ADM_EFFICIENCY:0 "統治効率：$VAL$"
  LIBERTY_DESIRE_FROM_WAR_EXHAUSTION:0 "§Y$OVERLORD$§!の戦争疲弊：$VAL$"
- LIBERTY_DESIRE_FROM_MERCANTILISM:0 "§Y$OVERLORD$§!の重商主義政策：$VAL$"
- LIBERTY_DESIRE_FROM_RELATIVE_POWER:0 "§Y$OVERLORD$§!（§Y$AMT$%§!）に対する相対的な力：$VAL$"
- LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL:2 "$COUNTED$の§Y$OVERLORD$§!（§Y$AMT$%§!）に対する相対的な力：$VAL$"
+ LIBERTY_DESIRE_FROM_MERCANTILISM:0 "§Y$OVERLORD$§!の重商主義：$VAL$"
+ LIBERTY_DESIRE_FROM_RELATIVE_POWER:0 "§Y$OVERLORD$§!に対する相対的な力（§Y$AMT$%§!）：$VAL$"
+ LIBERTY_DESIRE_FROM_RELATIVE_POWER_ALL:2 "$COUNTED$の§Y$OVERLORD$§!に対する相対的な力（§Y$AMT$%§!）：$VAL$"
  LIBERTY_DESIRE_ALL:0 "すべての"
  AND_THE_SUPPORTER:0 "と支援国"
  AND_THE_SUPPORTERS:0 "と支援国"
@@ -446,7 +446,7 @@
  LIBERTY_DESIRE_NEGATIVE_PRESTIGE:0 "§Y$OVERLORD$§!の威信がマイナス：$VAL$"
  LIBERTY_DESIRE_MONTHLY:0 "毎月変更：$VAL$"
  TRADEPOWERBONUS_FROM:0 "$FROM$から転送される：$VAL$\n"
- TRADEPOWERBONUS_NONE:0 " $WHERE$ 商人がいないと転送ボーナスが得られません。"
+ TRADEPOWERBONUS_NONE:0 "$WHERE$で商人が回収しているため転送ボーナスはありません。"
  SUBJECT_WARGOAL:0 "これは$WHOS$の戦争の目標です。それは我々が使用することができます。"
  OUR_RIVAL:0 "$WHO$は我々のライバルです。"
  OUR_ENEMY:0 "$WHO$は我々をライバル視しており、故に彼等は敵です。"
@@ -1113,7 +1113,7 @@
  kazani:0 "カザン"
  mishary:0 "ミシャル"
  nogaybak:0 "ノガイ"
- qasim:0 "カシム"
+ qasim:0 "カーシミ"
  tunisian:0 "チュニス"
  algerian:0 "アルジェ"
  moroccan:0 "モロッコ"
@@ -1458,7 +1458,7 @@
  bng_port_of_calcutta:0 "カルカッタの港"
  desc_bng_port_of_calcutta:0 "小さな村の一つに過ぎなかったカルカッタは、今やヨーロッパの交易商人たちが支配する港として繁栄している。"
  flavor_bng.1.t:0 "チシュティー教団とベンガルのスルタン"
- flavor_bng.1.d:0 "スーフィーのチシュティー教団は、常に我々の王朝と特別な関係を持っている。教団は我々の後援に頼ることができ、我々はその支持に頼ってきた。一昔前には、ベンガルのチシュティーの指導者ヌール・クトゥブ・アーラムが、スルタンがヒンドゥー教徒の簒奪者に脅かされていた時に、我々の権力の復帰を保証した。\nヌール・クトゥブ・アーラムの逝去の悲しい知らせが今、我々に届いたことで、世俗と精神的な力の間のこの同盟を再確認する時が来た。一方、これはまた、楽になるために、少々強くなりすぎた組織であるチシュティー教団から王位を遠ざける良い機会になるかもしれない。"
+ flavor_bng.1.d:0 "スーフィーのチシュティー教団は、常に我々の王朝と特別な関係を持っている。教団は我々の後援に頼ることができ、我々はその支持に頼ってきた。一昔前には、ベンガルのチシュティーの指導者ヌール・クトゥブ＝イ・アーラムが、スルタンがヒンドゥー教徒の簒奪者に脅かされていた時に、我々の権力の復帰を保証した。\nヌール・クトゥブ＝イ・アーラムの逝去の悲しい知らせが今、我々に届いたことで、世俗と精神的な力の間のこの同盟を再確認する時が来た。一方、これはまた、楽になるために、少々強くなりすぎた組織であるチシュティー教団から王位を遠ざける良い機会になるかもしれない。"
  flavor_bng.1.a:0 "教団の後援を続ける。"
  flavor_bng.1.b:0 "決別しよう。"
  flavor_bng.2.t:0 "ナビバンシャ"
@@ -1589,11 +1589,11 @@
  flavor_guj.11.d:0 "スーフィーの指導者であり、我々の一族の支持者であるアフマド・カトゥが死去した。この偉大な人物は、複数の世代に渡ってグジャラート・スルターン朝の顧問として行動し、かつてはアーメダバードの偉大な都市の計画に参加した。この損失は王国に大きな精神的空白を残し、我々の王朝は永遠に彼の恩を感じ続けるだろう。"
  flavor_guj.11.a:0 "偉大な男を称えるために壮大な名霊廟を建設しなければ。"
  flavor_guj.11.b:0 "王国にとって重大な損失だ。"
- flavor_guj.12.t:0 "キッセ・イ・サンジャン － グジャラートのパールシー社会"
- flavor_guj.12.d:0 "何百年も前、ペルシアのゾロアスター教の難民の集団がグジャラートに定住し、サンジャンのパールシー社会を設立した。時代を通して、この宗教的少数派は弾力的であることを示し、この活動的な地域の発展に積極的な役割を果たした。\n最近、パールシーの聖職者は、10世紀の彼らのペルシア出国から今日までの、パールシーの口述の歴史的伝統を記録している。結果として得られるキッセ・イ・サンジャンは確かに高級なペルシア詩の古典的な模範であるが、それは何よりも何世代にも渡ってパールシー自身が大切にする物語である。"
+ flavor_guj.12.t:0 "キッサ＝イ・サンジャン － グジャラートのパールシー社会"
+ flavor_guj.12.d:0 "何百年も前、ペルシアのゾロアスター教の難民の集団がグジャラートに定住し、サンジャンのパールシー社会を設立した。時代を通して、この宗教的少数派は弾力的であることを示し、この活動的な地域の発展に積極的な役割を果たした。\n最近、パールシーの聖職者は、10世紀の彼らのペルシア出国から今日までの、パールシーの口述の歴史的伝統を記録している。結果として得られるキッサ＝イ・サンジャンは確かに高級なペルシア詩の古典的な模範であるが、それは何よりも何世代にも渡ってパールシー自身が大切にする物語である。"
  flavor_guj.12.a:0 "OK"
- flavor_guj.13.t:0 "ミラト・イ・シカンドリ"
- flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・ イブン・ムハンマド・マンジューによるミラト・イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
+ flavor_guj.13.t:0 "ミラト＝イ・シカンドリ"
+ flavor_guj.13.d:0 "グジャラート・スルターン朝は歴史的な文学の豊かな伝統を持ち、多くの宮廷の歴史家たちが我々の王朝の後援を受けた。最近完成したシャイフ・シカンダル・ イブン・ムハンマド・マンジューによるミラト＝イ・シカンドリは、この優れた模範であるだけでなく、以前のすべての著作をその主題に取り入れようと試みている。その結果としての作品は、創設から今日までのグジャラート・スルターン朝の歴史に関する詳細な記録である。"
  flavor_guj.13.a:0 "OK"
  CS_NAME_TAKEN:0 "§R称号を獲得！§!"
  enforced_reservatum_ecclesiasticum:0 "聖職者に関する留保の原則を強制"
@@ -1849,7 +1849,7 @@
  desc_per_shiite_immigration:0 "シーア派の学者、弁護士、聖職者やその他の属性を持つ人々が、世界中から我々の海岸に続々と集まっている。"
  per_building_isfahan:0 "エスファハーンの再開発"
  desc_per_building_isfahan:0 "この地域の資源の一部は、世界の首都へとエスファハーンを再構築する事業に費やされている。"
- per_isfahan_maidan:0 "エスファハーン・ネスフェ・ジャハーン"
+ per_isfahan_maidan:0 "エスファハーン・ネスフェ＝イ・ジャハーン"
  desc_per_isfahan_maidan:0 "「エスファハーンは世界の半分である」とは、古いことわざである。都市を再建したことで、これはこれまで以上に真実である。この都市は、ペルシアだけでなく、ペルシア世界全体の芸術的、政治的、文化的な首都である。"
  MOVE_WITH_TRANSPORT:0 "\n§Y輸送船を使ってここに移動することが可能です§!"
  MOVE_WITH_TRANSPORT_BUSY:0 "\n§R輸送船を使ってここに移動することが可能ですが、現在すべての輸送船は満杯です§!"
@@ -1896,8 +1896,8 @@
  flavor_per.16.d:0 "我々が本当にペルシア国家を構築するのであれば、ペルシアの真に価値ある首都を作らねばならない。エスファハーンはペルシアの中心に位置する古都であり、我々の念願ともうまく合致するだろう。\n我が国の各地から集まった才能ある建築家たちは、すでに、この古都を我々の力にふさわしい象徴へと変換するための準備を整えている。しかしながら、この工程は時間も費用もかかるものになるだろう。"
  flavor_per.16.a:0 "作業を始めよう！"
  flavor_per.16.b:0 "$CAPITAL_CITY$がこの国の首都だ。"
- flavor_per.17.t:0 "エスファハーン・ネスフェ・ジャハーン"
- flavor_per.17.d:0 "エスファハーンの新王宮の建設がようやく終わり、我々はすでに今や世界の偉大な都市の一つとなっている、チャハール・バーグ通りから始まり、最後は大きなメイダーネ・ナクシェ・ジャハーンまで、我々は現在、我々の帝国のすべての政府機関を一ヶ所に集めている。\nこのエスファハーンのマイダーン自体が、我々の帝国の縮図であり、我々の国全体からの商人の看板で覆われている巨大な広場であり、記念碑的なマスジッド・イ・シャー・モスク、帝国のバザール、我々の$MONARCHTITLE$のアリ・カプ宮殿によって占められている。都市の再編を完了する過程で、多くの新しい建設技術が必然的に生まれ、職人や建築家の世代はこれまで考えられていた以上に交易を発展させた。"
+ flavor_per.17.t:0 "エスファハーン・ネスフェ＝イ・ジャハーン"
+ flavor_per.17.d:0 "エスファハーンの新王宮の建設がようやく終わり、我々はすでに今や世界の偉大な都市の一つとなっている、チャハール・バーグ通りから始まり、最後は大きなメイダン＝イ・ナクシ＝イ・ジャハンまで、我々は現在、我々の帝国のすべての政府機関を一ヶ所に集めている。\nこのエスファハーンのマイダーン自体が、我々の帝国の縮図であり、我々の国全体からの商人の看板で覆われている巨大な広場であり、記念碑的なマスジッド＝イ・シャー・モスク、帝国のバザール、我々の$MONARCHTITLE$のアリ・カプ宮殿によって占められている。都市の再編を完了する過程で、多くの新しい建設技術が必然的に生まれ、職人や建築家の世代はこれまで考えられていた以上に交易を発展させた。"
  flavor_per.17.a:0 "素晴らしい！"
  flavor_jaj.1.t:0 "ハブサのシッディ国家"
  flavor_jaj.1.d:0 "それがどのように起こったかについて、意見は分かれているようであり、ある者は彼らが暗闇の中からやって来たと言い、ある者は贈り物に偽装された箱の中に隠れていたと言う、しかし、どういうわけか我々の沿岸の砦の指揮官は、島の要塞とその支配下の全地域への支配を同時に失ってしまった。襲撃者は、かつてのエチオピアの奴隷であり、この地域の海軍および陸軍では非常に一般的な光景となっている、シッディ族の集団である。\nシッディ族の指導者は、今日我々の宮廷に聖職者を派遣し、彼らが我々の国家への忠実な奉仕と引き換えに、彼らが奪った要塞を支配することを許可するよう求めている。"
@@ -2133,10 +2133,10 @@
  prices.35.d:0 "官僚は、より簡単に作業できることで、羊皮紙やその他の材料よりも、長い間紙を好んできた。公的な書類を改ざんすることをより困難にするために取ることができる様々な措置も存在している。ファブリアーノの透かしの発明は、その一つであり、精巧なマーブリングとイスラム紙の生産者による書法がもう一つである。\n帝国がますます大陸へと広がるにつれ、証明可能な信頼性と使いやすさへの必要性が高まり、中国からヨーロッパまで帝国の官僚主義が公式の文書と命令のために紙を独占的に使用することに繋がっている。"
  prices.35.a:0 "紙には未来がある。"
  PAPER_IN_BUREAUCRACY:0 "透かしとマーブリング"
- prices.36.t:0 "貸出図書館や書籍クラブ"
+ prices.36.t:0 "貸出図書館・書籍クラブ"
  prices.36.d:0 "識字率の上昇に伴い、書籍の広がりと普及は、経済的、理念的な理由の両方の目標となっている。書店は多くの都市で一般的な光景となり、[lending_libraries_here.GetName]などの大型の店では、販売用の書籍の箱が並んでいる。\n本自体を買う余裕がない人にとっては、有料の貸出図書館や図書購入協同組合、購読協会のように、書籍の購入に関して共同で資金調達したり、書籍を貸し出したりする方法が増えている。"
  prices.36.a:0 "大衆は、本当に書かれている言葉を理解できるのかね？"
- LENDING_LIBRARIES:0 "貸出図書館や書籍クラブ"
+ LENDING_LIBRARIES:0 "貸出図書館・書籍クラブ"
  prices.37.t:0 "コロンブス交換"
  prices.37.d:0 "アメリカ大陸の植民地化に伴い、新たな種子、作物、動物が、新旧世界の両方に幅広く広がり始めている。導入の初期から、トウモロコシ、キャッサバ、トマトなどの作物は、今や新世界で非アメリカ的な獣への負担が引っ張りだことなっているのと同じように、旧世界全体へと広がっている。\nかつては何かを栽培することに適さないと考えられていた土地が、食糧や穀物の生産に利用されるようになったため、世界中の食料の一般的な入手可能性は以前にも増して高まっている。今世紀に起こった少数の出来事は、栽培された食糧が以前よりも希少であるため、庶民に多くの利益をもたらすだろう。"
  prices.37.a:0 "それは素晴らしい…"
