--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -337,7 +337,7 @@
  devotion_events.203.a:0 "金は大きな金庫に。"
  devotion_events.203.b:0 "いつものように、必要とする貧しき者の元へ。"
  devotion_events.204.t:0 "女性の教育"
- devotion_events.204.d:1 "ムハンマド、彼に平安あれ、は恥でイスラムを学ぶことを妨げてはならないとしてアンサールの女性たちを称賛した。カラウィーイーン大学を設立した、ファティマ・アル・フィフリ、有能な数学者であったコルドバのルブナや、ファーティマ・ビンティ・アビ・アル・カシム・アブド・アル・ラフマン・ビンティ・ムハンマド・ビンティ・ガリブ・アル・アンサール・アリ・シャラトによる法学理論、法理学だけでなく、神秘主義で、彼女のイスラム科学の知識を示した作品は、あなたが女性を教育するときに起こることの偉大な模範である。歴史を通して、女性はイスラムについて学び、[Root.Religion.GetName]を広める努力を喜んで続けることができることを示している。女性に学び、教育を受ける偉大な機会を与えることで、我々はより早く信仰を広めることができるようになるだろう。"
+ devotion_events.204.d:1 "ムハンマド、彼に平安あれ、は恥でイスラムを学ぶことを妨げてはならないとしてアンサールの女性たちを称賛した。カラウィーイーン大学を設立した、ファティマ・アル・フィフリ、有能な数学者であったコルドバのルブナや、ファーティマ・ビンティ・アビ・アル・カーシム・アブド・アル・ラフマン・ビンティ・ムハンマド・ビンティ・ガリブ・アル・アンサール・アリ・シャラトによる法学理論、法理学だけでなく、神秘主義で、彼女のイスラム科学の知識を示した作品は、あなたが女性を教育するときに起こることの偉大な模範である。歴史を通して、女性はイスラムについて学び、[Root.Religion.GetName]を広める努力を喜んで続けることができることを示している。女性に学び、教育を受ける偉大な機会を与えることで、我々はより早く信仰を広めることができるようになるだろう。"
  devotion_events.204.a:0 "教育は男女問わずすべての者に与えられるべきだ。"
  devotion_events.204.b:0 "決定を下す前に熟慮すべき問題だろう。"
  devotion_events.205.t:0 "バザール"
@@ -1360,7 +1360,7 @@
  subject_interaction_events.40.a:0 "それを要求する"
  subject_interaction_events.40.b:0 "そのままにする。"
  subject_interaction_events.41.t:0 "正当な所有権"
- subject_interaction_events.41.d:2 "Of late our subjects in [From.GetUsableName] have seen fit to remind us of the tensions caused by us owning land in [rightful_province.GetName], that they view as rightfully theirs. Handing it back to them would show us to be a benevolent power, however, such a move could also weaken us."
+ subject_interaction_events.41.d:2 "最近、[From.GetUsableName]における我々の従属国の一つは、我々に、[rightful_province.GetName]の土地を所有していることにより引き起こされた緊張を思い起こさせ、それを正当な彼らのものであると見なすようになった。彼らにそれを返還することは、我々が慈悲深い力であることを示すだろうが、そのような動きはまた、我々を弱めることにもなるだろう。"
  subject_interaction_events.41.a:0 "それは正当に彼らのものだ。"
  subject_interaction_events.41.b:0 "それは我々のものであり、これからもそうあり続けるだろう。"
  subject_interaction_events.42.t:0 "正当な所有権が拒否された！"
@@ -1390,7 +1390,7 @@
  custom_idea_fort_maintenance_desc:0 "戦争がある所には、要塞がある。一方は一時的なものであり、戦争で勝利し、敗北した後に放棄される戦場の要塞である。一方、他のものは恒久的な要塞であり、堅固な壁を持ち、兵士、大砲の弾、または他の発射体であっても、それに対してぶつけられる全てのものに対して頑丈な防御を提供する。要塞維持の改善はより良い要塞につながり、安価で容易に防衛の第一線を維持することができる。"
  custom_idea_development_cost:0 "土地改革"
  custom_idea_development_cost_desc:0 "多くの古代の権利と習慣は、我々の支配下で土地を開発する方法にある。我々は、我が国のあらゆる土地ができるだけ容易に最も可能性の高いものに発展できるよう、全国の土地が確実に組織され、保持されるため、徹底的な土地改革を行う必要がある。"
- free_cities.3.t:1 "Pitchforks and Torches on the Streets of [Root.Capital.GetName]"
+ free_cities.3.t:1 "[Root.Capital.GetName]の街頭の熊手と松明"
  free_cities.3.d:1 "The discontent and anonymity between the lower classes and the rulers of the city has brought us to the brink of civil war. We are ill-prepared to face a full-fledged rebellion, and many members of the upper classes are urging the city council to take the matter to the [Emperor.Monarch.GetTitle], to beg the [Emperor.Monarch.GetTitle] himself for any help he is able to provide. Good strong men and gold are what we need most to end the fires of rebellion that smolder the streets of [Root.Capital.GetName]."
  free_cities.3.a:1 "[Emperor.Monarch.GetTitle]に助けを求める。"
  free_cities.3.b:0 "我々が持っている小さな兵士たちを掻き集め、自分で処理する。"
@@ -1437,7 +1437,7 @@
  free_cities.14.t:0 "都市同盟の提案"
  free_cities.14.d:1 "There have been many Leagues of mutual cooperation within the Holy Roman Empire. The Hanseatic League, for example, was a league of merchant guilds in a commercial and defensive confederation, or the Swabian League which was a mutual defense and peacekeeping association. Some Leagues become so powerful and united that they are even viewed as a state in themselves, like the Swiss League. The Free City of [From.Country.GetName] has suggested that we join something similar, a cooperation of sorts, where we collaborate in matters of trade, keeping imperial peace, and supporting tribunals."
  free_cities.14.a:1 "失うものがあるのか？参加だ！"
- free_cities.14.b:1 "It seems like a massive waste of time and resources."
+ free_cities.14.b:1 "大量の時間と資源の無駄、それ以上の何物でもない。"
  free_cities.15.tt:0 "[From.Country.GetName]はあなたの同意を受け取ります。"
  free_cities.16.tt:0 "[From.Country.GetName]はあなたからの拒否を受け取ります。"
  free_cities.15.t:0 "都市同盟の一員"
