--- a/source/localisation/countries_l_english.yml
+++ b/source/localisation/countries_l_english.yml
@@ -200,7 +200,7 @@
  PSK:0 "プスコフ"
  PUN:0 "パンジャーブ"
  QAR:0 "黒羊朝"
- QAS:0 "カシム"
+ QAS:0 "カーシム"
  QUE:0 "ケベック"
  RAG:0 "ラグーザ"
  RAJ:0 "ラージプーターナー"
@@ -322,7 +322,7 @@
  CEP_ADJ:0 "コルフ"
  CHA_ADJ:0 "チャンパ"
  CHE_ADJ:0 "チェロキー"
- CHG_ADJ:0 "チャガタイ"
+ CHG_ADJ:0 "チャガタイ・ハナート"
  CHK_ADJ:0 "チャンパーサック"
  CHL_ADJ:0 "チリ"
  CHM_ADJ:0 "チムー"
@@ -470,7 +470,7 @@
  PSK_ADJ:0 "プスコフ"
  PUN_ADJ:0 "パンジャーブ"
  QAR_ADJ:0 "黒羊朝"
- QAS_ADJ:0 "カシモフ"
+ QAS_ADJ:0 "カーシム"
  QUE_ADJ:0 "ケベック"
  RAG_ADJ:0 "ラグーザ"
  RAJ_ADJ:0 "ラージプタナ"
