--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -40,7 +40,7 @@
  animism_ritual_education_title:0 "宗教教育"
  animism_ritual_education_desc:0 "一神教の概念はどこに行っても存在する身の毛もよだつ信仰だ。我々は人々に世界の本質や仕組み、そして数多の霊たちに関する真実を教え広めていかねばならない。"
  zoroastrian_diaspora_title:0 "四散したゾロアスター教徒"
- zoroastrian_diaspora_desc:0 "ペルシアによる厳しい弾圧が行われた時代、多くの者は先祖から受け継いできた家を去り国を逃れた。サンジャンの物語は長く苦しい旅路を経てグジャラートに定住し、新たな火を灯して再出発を果たした人々についても語っている。彼らは持ち前の勤勉さを発揮し、新しい土地でも繁栄していった。私たちが国内の主要な地域でゾロアスター教の布教に努めることによって、かつて国外に散った同胞たちと再会することになるだろう。"
+ zoroastrian_diaspora_desc:0 "ペルシアによる厳しい弾圧が行われた時代、多くの者は先祖から受け継いできた家を去り国を逃れた。キッサ＝イ・サンジャンの物語は長く苦しい旅路を経てグジャラートに定住し、新たな火を灯して再出発を果たした人々についても語っている。彼らは持ち前の勤勉さを発揮し、新しい土地でも繁栄していった。私たちが国内の主要な地域でゾロアスター教の布教に努めることによって、かつて国外に散った同胞たちと再会することになるだろう。"
  zoroastrian_royal_fires_title:0 "聖火の再点火"
  zoroastrian_royal_fires_desc:0 "数ある火の寺院の中でも、ゾロアスター自身によって点火されたとされる伝説の3つの火は特に大きな権威を持つ。しかしそれらは時代を経て我らの信仰が薄れていくと同時に失われ、そのままさらに時は流れ、とうとうそれらがどこにあったのかさえ分からなくなってしまった。同じ火を再び灯すことはできないが、かつて寺院があった場所を探し当て新たな火をゾロアスター帝国隆盛の象徴として灯そう。"
  zoroastrian_rites_of_admission_title:0 "入信の儀式"
