--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -33,14 +33,14 @@
  JUSTIFY_TRADE_BASE:0 "交易競争の正当化のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
  FABRICATE_CLAIM_BASE:1 "§!請求権の捏造のコストは以下に基づいています\n元のコスト：$VAL|Y0$\n"
  FABRICATE_CLAIM_INSIDE_HRE:1 "神聖ローマ帝国内：$VAL|-=1%$\n"
- FABRICATE_ALREADY_CLAIMS:1 "Already $CLAIM|Y$ Claims: $VAL|-=1%$\n"
+ FABRICATE_ALREADY_CLAIMS:1 "すでに$CLAIM|Y$を主張：$VAL|-=1%$\n"
  FABRICATE_CLAIM_CAPPED:0 "\nCapped At $VAL|Y$ cost!"
  SPECIAL_FORCE_LIMIT:0 "$NAME$は以下の要因のため、$VAL|Y$のみ保有できます。\n$WHY$"
- COSSACKS_FORCELIMIT:0 "We can recruit up $VAL|%Y$ of our force-limit as §GCossacks§! of $FL$ due to:\n"
- RAJPUT_FORCELIMIT:0 "We can recruit up $VAL|%Y$ of our force-limit as §GRajputs§! of $FL$ due to:\n"
+ COSSACKS_FORCELIMIT:0 "以下の要因により、扶養限界の$VAL|%Y$を$FL$の§Gコサック§!として徴集できます：\n"
+ RAJPUT_FORCELIMIT:0 "以下の要因により、扶養限界の$VAL|%Y$を$FL$の§Gラージプート§!として徴集できます：\n"
  REV_GUARD_FORCELIMIT:0 "We can recruit up $VAL|%Y$ of our force-limit as §GRevolutionary Guards§! of $FL$ due to:\n"
- MARINES_FORCELIMIT:0 "We can recruit up $VAL|%Y$ of our force-limit as §GMarines§! of $FL$ due to:\n"
- JANISSARY_FORCELIMIT:0 "We can recruit up $VAL|%Y$ of our force-limit as §GJanissaries§! of $FL$ as we can only recruit them from our Heathen Provinces.\n"
+ MARINES_FORCELIMIT:0 "以下の要因により、扶養限界の$VAL|%Y$を$FL$の§G海兵隊§!として徴集できます：\n"
+ JANISSARY_FORCELIMIT:0 "異教徒の州からのみ徴集が可能であるため、扶養限界の$VAL|%Y$を$FL$の§Gイェニチェリ§!として徴集できます。\n"
  NO_CURRENT_COUNTRIES_IN_THIS_LIST:0 "Currently No Countries"
  HARSH_INFO_TOOLTIP:0 "評議会で過酷な措置を支持している枢機卿が$VAL|Y$人います。\n過酷な措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
  CONCIL_INFO_TOOLTIP:0 "評議会で和解措置を支持している枢機卿が$VAL|Y$人います。\n和解措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
@@ -72,11 +72,11 @@
  ASSIGN_HEIR_WHY:0 "$WHY$のために不可能"
  CAN_NOT_BE_DISIHERITED:0 "(§Rこの後継者は廃嫡できません!§!)\n"
  MODIFIER_BLOCK_INTRODUCE_NEW_HEIR:0 "新しい後継者の指名を阻止します"
- SELLSHIP_INDEBT:0 "$REASON$のため船を売却することはできません。"
+ SELLSHIP_INDEBT:0 "船を売却することができません。$REASON$"
  PROVINCE_HAS_LESS_THAN_BUILDINGS:0 "$NAME|Y$の建物の数が$VAL|Y$未満である。\n"
  PROVINCE_HAS_AT_LEAST_BUILDINGS:0 "$NAME|Y$の建物の数が$VAL|Y$以上である。\n"
- HAS_LESS_MONTHLY_POWER_THAN:0 "$NAME|Y$は月毎に$VAL|Y$ $TYPE$以下の収益を得る。\n"
- HAS_AT_LEAST_MONTHLY_POWER:0 "$NAME|Y$は月毎に$VAL|Y$ $TYPE$以上の収益を得る。\n"
+ HAS_LESS_MONTHLY_POWER_THAN:0 "$NAME|Y$は月毎に$VAL|Y$ $TYPE$ 以下の収益を得る。\n"
+ HAS_AT_LEAST_MONTHLY_POWER:0 "$NAME|Y$は月毎に$VAL|Y$ $TYPE$ 以上の収益を得る。\n"
  HAS_LESS_POWER_PROJECTION_THAN:0 "$NAME|Y$の戦力投射が$VAL|Y$未満である。\n"
  HAS_AT_LEAST_POWER_PROJECTION:0 "$NAME|Y$の戦力投射が$VAL|Y$以上である。\n"
  OWNER_IMPROVED_COUNT_TRIGGER_LESS:0 "現在の所有者によって$VAL|Y$回未満改善されました。\n"
@@ -103,11 +103,11 @@
  custom_mercantilism_cost_desc:0 "The governmental regulation of a nation's economy for the purpose of adding to the state power at the expense of rival national powers. It was the economic counterpart of political absolutism."
  custom_allowed_marine_fraction:0 "海兵隊"
  custom_allowed_marine_fraction_desc:0 "Training your army for quick coastal attacks has been ever more required as time goes on. The Marines will allow you to land on the beaches faster than any other military unit in the game."
- HEGEMONS_TITLE_WIN:0 "Hegemons"
+ HEGEMONS_TITLE_WIN:0 "覇権"
  LEDGER_GOVERNMENT_ADMIN_EFF:0 "統治効率"
  alert_revolution_can_be_lost_instant:0 "§Y革命は失敗するかもしれません§!"
  alert_revolution_can_be_lost_delayed:0 "我々はもはや熱狂的な革命国家ではないため、$LIST|Y$は我々に対する革命を宣言する可能性があります。"
- alert_low_crown_lands_instant:1 "§YLow Crownland§!"
+ alert_low_crown_lands_instant:1 "§Y直轄領が少なすぎる§!"
  alert_low_crown_lands_delayed:1 "王家は全領土の$VAL|&Y$を支配しており、以下の効果を受けます：\n$EFFECT$"
  TRADE_GOODS_PRODUCED_LESS_THAN:2 "$WHO|Y$が$GOOD|Y$を生産する州を$AMOUNT|Y$未満持っている。\n"
  TRADE_GOODS_PRODUCED_AT_LEAST:2 "$WHO|Y$が$GOOD|Y$を生産する州を$AMOUNT|Y$以上持っている。\n"
@@ -151,13 +151,13 @@
  MODIFIER_STATES_GOVERNING_COST:0 "States Governing Cost"
  INC_BLOCKADES:0 "Blockading Foreign Ports"
  INC_LOOTING:0 "Looting Foreign Cities"
- CV_FROM_BLOCKADING:0 "Blockading Foreign Ports: $VAL|2+$¤"
- CV_FROM_LOOTING:0 "Looting Foreign Cities: $VAL|2+$¤"
+ CV_FROM_BLOCKADING:0 "外国の港を封鎖している：$VAL|2+$¤"
+ CV_FROM_LOOTING:0 "外国の都市を略奪している：$VAL|2+$¤"
  EV_EXP_LOOTING:0 "我々の都市が略奪された：$VAL|2-$¤"
  EV_EXP_BLOCKADE:0 "我々の港が封鎖された：$VAL|2-$¤"
  SORT_BY_ECONOMY:0 "Sort by §YEconomical Impact§!"
  EXP_BLOCKADES:0 "Ports Blockaded"
- EXP_LOOTING:0 "Cities Looted"
+ EXP_LOOTING:0 "都市が略奪された"
  VIEW_US_AS_RIVALS:0 "彼らは我々をライバルとみなしています！"
  lost_hegemony:0 "Lost Hegemony"
  ven_arsenal_marines:0 "Venetian Marines"
@@ -165,12 +165,12 @@
  DISBAND_UNIT_RETURN_SAILORS_CAPPED:0 "Only $NUMBER|Y$ of its men will return to our sailors pool as we can't exceed our maximum sailors of $MAX|Y$."
  DISBAND_UNIT_RETURN_SAILORS:0 "$NUMBER|Y$ of its men will return to our sailors pool."
  TRADE_COMPANY_SAME_SUPER_REGION:0 "As your capital is also a part of $NAME|Y$, it can not be turned into a Trade Company"
- ND_SPRITE_PACK:0 "Sprite Packs"
- ND_SPRITE_PACK_SELECTED:0 "§YSprite Pack selected. To unselect click again.§!"
- ND_SPRITE_PACK_UNSELECTED:0 "§YSprite Pack not Selected. Click to select it for your custom nation.§!"
+ ND_SPRITE_PACK:0 "スプライトパック"
+ ND_SPRITE_PACK_SELECTED:0 "§Yスプライトパックが選択されています。選択を解除するにはもう一度クリックしてください。§!"
+ ND_SPRITE_PACK_UNSELECTED:0 "§Yスプライトパックが選択されていません。クリックしてカスタム国家にそれを選択します。§!"
  ND_UNIT_VIEWER_DESC:1 "Is currently showing $TYPE|Y$ of Tier $LEVEL|Y$."
  ND_UNIT_VIEWER_INTERACTIVE_DESC:2 "§YHold Right Mouse Button§! to rotate sprite§!."
- ND_SPRITE_PACK_DETAIL_LIST_START:0 "This Sprite Pack contains:"
+ ND_SPRITE_PACK_DETAIL_LIST_START:0 "このスプライトパックは以下を含みます："
  ND_SPRITE_PACK_DETAIL_LIST_ENTRY:1 "\nレベル$LEVEL|Y$の$TYPE|Y$"
  CONCILATORY_POSITION_TAKEN:0 "A Conciliatory Stance"
  HARSH_POSITION_TAKEN:0 "A Harsh Stance"
@@ -338,9 +338,9 @@
  EXPAND_ADMINISTRATION:0 "統治の拡大"
  CALC_EXPAND_ADMIN:0 "$VAL|Y$ development will be cheaper in $WHERE$"
  EXPAND_ADMINISTRATION_CONFIRM_TITLE:0 "統治の拡大"
- EXPAND_ADMINISTRATION_CONFIRM_DESC:0 "Do you want to spend $COST|Y$ Reform Progress to get the following effects:\n$EFFECT$?"
+ EXPAND_ADMINISTRATION_CONFIRM_DESC:0 "以下の効果を得るために$COST|Y$の改革進捗度を費やしますか？：\n$EFFECT$"
  EXPAND_ADMINISTRATION_NOT_ENOUGH_PROGRESS:0 "§R- You need at least $COST$ Reform Progress to expand your administration.§!"
- EXPAND_ADMINISTRATION_TT:1 "Spend $COST|Y$ Reform Progress to gain the following effects:\n$EFFECT$"
+ EXPAND_ADMINISTRATION_TT:1 "$COST|Y$の改革進捗度を費やして以下の効果を得ます：\n$EFFECT$"
  COUNCIL_OF_TRENT:0 "トリエント公会議"
  COUNCIL_POSITION_ALREADY:0 "§RYou already have selected this stance in the Council.§!"
  COUNCIL_POSITION_THIS_RULER:0 "§R$NAME$ has already taken a stance in this Council, and a ruler can not change his or her mind.§!"
@@ -519,31 +519,31 @@
  PROVINCE_REMOVE_REVOLUTION_EFFECT:1 "Revolutionary ideas will be removed from $PROVINCE|Y$."
  SPAWN_CENTER_OF_REVOLUTION_EFFECT:0 "A Center of Revolution will appear in $PROVINCE|Y$."
  REMOVE_CENTER_OF_REVOLUTION_EFFECT:0 "$PROVINCE|Y$の革命の中心地は削除されます。"
- mechanic_uses_revolutionary_zeal_yes:0 "Uses Revolutionary Zeal instead of Absolutism."
- COUNTRY_REVOLUTIONARY_ZEAL_MODIFIER:0 "Revolutionary Zeal"
+ mechanic_uses_revolutionary_zeal_yes:0 "絶対主義の代わりに革命熱を使用します。"
+ COUNTRY_REVOLUTIONARY_ZEAL_MODIFIER:0 "革命熱"
  REV_ZEAL_CHANGE_TT:0 "以下の理由により毎年$VAL|+=2$変化します：\n$WHY$"
  REVOLUTIONARY_ZEAL_INSTANT:0 "With $VAL|Y$ Revolutionary Zeal our country gains the following benefits:\n\n$MODIFIERS$"
  REVOLUTIONARY_ZEAL_DELAYED:0 "Revolutionary Zeal emboldens our citizens and soldiers to give their best in the fight against tyranny. It replaces Absolutism for Revolutionary nations.\n\nAt §Y100§! it gives the following benefits:\n$MODIFIERS$"
  MAX_REVOLUTIONARY_ZEAL_BASE:0 "§Y$SPREAD$%§!の革命の広がりから：$VAL$"
- MAX_REVOLUTIONARY_ZEAL_INSTANT:0 "Our current maximum Revolutionary Zeal is $MAX|0Y$:\n\n$DETAILS$"
+ MAX_REVOLUTIONARY_ZEAL_INSTANT:0 "我々の現在の最大革命熱は$MAX|0Y$です：\n\n$DETAILS$"
  MAX_REVOLUTIONARY_ZEAL_DELAYED:0 "A country's Revolutionary Zeal is limited by how much the Revolution has spread to its provinces. The more it spreads, the higher the cap."
- PEACE_OPTION_ZEAL_GAIN:0 "$TAG|Y$ gains $ZEAL|G$ Revolutionary Zeal."
- PEACE_OPTION_ZEAL_LOSS:0 "$TAG|Y$ loses $ZEAL|R$ Revolutionary Zeal."
- COUNTRY_ZEAL_GAIN:0 "We will gain $ZEAL|G$ Revolutionary Zeal."
- COUNTRY_ZEAL_LOSS:0 "We will lose $ZEAL|R$ Revolutionary Zeal."
- USES_ABSOLUTISM_TRIGGER:0 "Uses Absolutism"
- USES_REVOLUTIONARY_ZEAL_TRIGGER:0 "Uses Revolutionary Zeal"
- COUNTRY_HAS_REVOLUTIONARY_ZEAL_TRIGGER:0 "Has a least $VAL|0Y$ Revolutionary Zeal"
- COUNTRY_HAS_NOT_REVOLUTIONARY_ZEAL_TRIGGER:0 "Has less than $VAL|0Y$ Revolutionary Zeal"
- COUNTRY_HAS_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "Has a least $VAL|0Y$ Maximum Revolutionary Zeal"
- COUNTRY_HAS_NOT_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "Has less than $VAL|0Y$ Maximum Revolutionary Zeal"
+ PEACE_OPTION_ZEAL_GAIN:0 "$TAG|Y$は$ZEAL|G$の革命熱を獲得"
+ PEACE_OPTION_ZEAL_LOSS:0 "$TAG|Y$は$ZEAL|R$の革命熱を失う。"
+ COUNTRY_ZEAL_GAIN:0 "我々は革命熱を$ZEAL|G$得ます。"
+ COUNTRY_ZEAL_LOSS:0 "我々は革命熱を$ZEAL|R$失います。"
+ USES_ABSOLUTISM_TRIGGER:0 "絶対主義を使っている"
+ USES_REVOLUTIONARY_ZEAL_TRIGGER:0 "革命熱を使っている"
+ COUNTRY_HAS_REVOLUTIONARY_ZEAL_TRIGGER:0 "革命熱が$VAL|0Y$以上である"
+ COUNTRY_HAS_NOT_REVOLUTIONARY_ZEAL_TRIGGER:0 "革命熱が$VAL|0Y$未満である"
+ COUNTRY_HAS_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "最大革命熱が$VAL|0Y$以上である"
+ COUNTRY_HAS_NOT_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "最大革命熱が$VAL|0Y$未満である"
  IS_REVOLUTIONARY:0 "Is revolutionary"
  IS_NOT_REVOLUTIONARY:0 "Is not revolutionary"
  REVOLUTION_DISMANTLED_SINCE:0 "The Revolution was dismantled at least $YEARS|Y$ years ago."
  REVOLUTION_NOT_DISMANTLED_SINCE:0 "The Revolution is still going on or was dismantled less than $YEARS|Y$ years ago."
  COUNTRY_CLAIM_REVOLUTION:0 "We can claim the Revolution Target!"
  COUNTRY_CLAIM_REVOLUTION_ZEAL_TOO_LOW:0 "Our Revolutionary Zeal is too low to contest the Revolution Target, we need $MIN|Y$ but only have $VAL|R$."
- COUNTRY_CLAIM_REVOLUTION_TARGET_STRONG:1 "$TARGET|Y$ has a higher Revolutionary Zeal than you. They have $ZEAL|Y$ Revolutionary Zeal."
+ COUNTRY_CLAIM_REVOLUTION_TARGET_STRONG:1 "$TARGET|Y$はあなたより多くの革命熱を持っています。彼らの革命熱は$ZEAL|Y$です。"
  COUNTRY_CLAIM_REVOLUTION_TARGET_TOO_SOON:0 "$TARGET|Y$ is currently carrying the Revolution. If their Revolutionary Zeal doesn't go above $LOW|Y$ before $DATE|Y$, we will be able to claim their title."
  alert_can_claim_revolution_instant:0 "§YWe can claim the Revolution Target§!"
  alert_can_claim_revolution_delayed:0 "The Revolution is weak right now. It is time for our nation to step up and lead the Revolution to victory!"
@@ -561,8 +561,8 @@
  crusades_after_age_limit:0 "Crusades after age limit"
  praeclara_carissimi:1 "キリスト教徒の献身"
  praeclara_carissimi_DESC:1 "良いキリスト教徒として、我々は模範を示さなければならない。ユダヤ教徒や他の不信者を我らが領地に招き、キリスト教統治の恩恵を見せ、主の存在を受け入れさせるのだ。"
- CURIA_TREASURY_LESS_THAN:0 "Curia Treasury contains less than $CASH|Y$¤"
- CURIA_TREASURY_AT_LEAST:0 "Curia Treasury contains at least $CASH|Y$¤"
+ CURIA_TREASURY_LESS_THAN:0 "教皇資金が$CASH|Y$¤未満である"
+ CURIA_TREASURY_AT_LEAST:0 "教皇資金が$CASH|Y$¤以上である"
  CURIA_YEARLY_TITHE_LESS_THAN:0 "Curia Yearly Tithe less than $CASH|Y$¤"
  CURIA_YEARLY_TITHE_AT_LEAST:0 "Curia Yearly Tithe at least $CASH|Y$¤"
  CURIA_TREASURY_CONTRIBUTION_LESS_THAN:0 "Contribution to Curia Treasury less than $CASH|Y$¤"
@@ -577,7 +577,7 @@
  DEFENDER_OF_FAITH:0 "信仰の擁護者"
  IS_DEFENDER_OF_FAITH_OF_TIER:0 "Is Defender of the Faith of tier $TIER|Y$"
  MODIFIER_MANPOWER_IN_TRUE_FAITH_PROVINCES:0 "真の信仰州の人的資源"
- DEFENDER_OF_FAITH_EFFECT:1 "We have tier $TIER|Y$ as a total of $COUNTRIES|Y$ nations follow the $RELIGION|Y$ faith. The next tier is available at $NEXT|Y$. Currently being the Defender of the Faith will have the following effects:\n$EFFECT$"
+ DEFENDER_OF_FAITH_EFFECT:1 "合計$COUNTRIES|Y$ヵ国が$RELIGION|Y$信仰に従っているため、我々のレベルは$TIER|Y$です。次のレベルは$NEXT|Y$ヵ国で利用できます。現在、信仰の擁護者であることで以下の効果があります：\n$EFFECT$"
  DEFENDER_OF_FAITH_HIGHEST_EFFECT:0 "合計$COUNTRIES|Y$ヵ国が$RELIGION|Y$信仰に従っているため、我々のレベルは$TIER|Y$です。現在、信仰の擁護者であることで以下の効果があります：\n$EFFECT$"
  DEFENDER_OF_FAITH_SHARED_EFFECT:0 "さらに、我々の仲間の信者たちは以下を持っています：\n$EFFECT$"
  MACRO_STATES_NUM_PROVINCES:0 "$VAL$/$SIZE$"
@@ -712,7 +712,7 @@
  STATE_MAINTENANCE:0 "$STATE|Y$ Maintenance: $MAINTENANCE|R$"
  BENEFIT_FOR_PROVINCE:0 "帝国の州が以下を得る：\n$MODIFIER$"
  emperor_per_prince_modifier:0 "Per Prince in Empire"
- gemeinerpfennig_emperor_per_prince:0 "Gemeiner Pfennig from Princes"
+ gemeinerpfennig_emperor_per_prince:0 "諸侯からの一般帝国税"
  hre_event.7.t:0 "The Perpetual Diet of [From.GetCapitalName]"
  hre_event.7.d:0 "From the present day henceforth, the Imperial Diet shall sit in continuous session in the city of [From.GetCapitalName], rather than on an ad hoc basis as previously. This step will surely increase the cohesion of the Empire and help formalize the relationship between the Emperor and the Princes. On the other hand, it also makes [From.GetCapitalName] a prime target for those wishing to do harm to the Empire..."
  hre_event.7.a:0 "For a safe and secure society."
@@ -726,7 +726,7 @@
  geteilte_macht_elector_per_prince:0 "Geteilte Macht from Princes"
  geteilte_macht_province:0 "Geteilte Macht"
  BENEFIT_FOR_ELECTOR:0 "選帝侯が以下を得る：\n$MODIFIER$"
- IMPERIALREALMWARTITLE:0 "Declare Reichskrieg"
+ IMPERIALREALMWARTITLE:0 "帝国戦争を宣言"
  IMPERIALREALMWARDESC:0 "Do you wish to declare a Reichskrieg against $COUNTRY|Y$? This will cost us $COST|Y$ Imperial Authority but give us a Casus Belli against $COUNTRY|Y$ for 5 years. This Casus Belli will allow us to muster the might of the entire Empire."
  REICHSKRIEG_WAR_NAME:0 "$ORDER$$FIRST$ Reichskrieg against $SECOND_NAME$"
  ALEADY_HAS_IMPERIAL_REALM_WAR_CB:0 "§RWe already have declared Reichskrieg against $TARGET|Y$!§!"
@@ -813,7 +813,7 @@
  OFFER_LOAN_INCREASE_DURATION:0 "Increase Duration"
  DURATION:0 "Duration"
  MIL_UPKEEP_WAR_TAXES:0 "戦争税： -$COST|R$\n"
- WAR_TAXES_TOOLTIP_START:0 "戦争中に与えられます：\n"
+ WAR_TAXES_TOOLTIP_START:0 "戦争中に以下が与えられます：\n"
  WAR_TAXES_TOOLTIP_COST:0 "キャンセルされるまで戦争中は毎月$COST|Y$£mil£がかかります。"
  ALLY_FORCES_UNKNOWN:0 "???"
  ALLY_FORCE_ENTRY:0 "$ADJ$ $TYPE$: $AMOUNT|Y0$\n"
@@ -859,7 +859,7 @@
  fourth_concession_concilatory:0 "信仰義認"
  CROWN_INTERACTIONS_COOLDOWN:0 "§R$DATE|Y$に再び使用可能§!"
  ESTATES_DEV_SHARE_TITLE:0 "階級の土地"
- ESTATES_CROWNLAND_TITLE:0 "Crownland"
+ ESTATES_CROWNLAND_TITLE:0 "直轄領"
  ESTATES_AGENDA_TITLE:0 "議題"
  DEV_SHARE_VAL:0 "$VAL|&0Y$"
  ESTATE_PRIVILEGE_BENEFITS_SHORT:0 "$MODIFIERS$\n"
@@ -924,7 +924,7 @@
  NO_PROVINCES_TO_ADD:0 "帝国に追加できる適切な州がありません。"
  ADD_PROVINCES_TO_HRE_TOOLTIP:0 "Will add $NUM|Y$ provinces to the Holy Roman Empire."
  ADD_PROVINCES_TO_EMPIRE:0 "すべての州を帝国に追加します"
- ONLY_A_MEMBER_CAN_ADD:0 "You are not a member of the Holy Roman Empire."
+ ONLY_A_MEMBER_CAN_ADD:0 "あなたは神聖ローマ帝国の一員ではありません。"
  ADD_PROVINCES_TO_EMPIRE_DESC:0 "This will add all eligible provinces to the empire. Are you sure you want to add $NUM|Y$ provinces to the empire?"
  GOVCAP_PROGRESS_VALUE:0 "$USED|0$/$CAP|0$"
  SPRTE_TYPE_LABEL:0 "ユニットタイプ"
@@ -990,7 +990,7 @@
  CREATE_SUCCESSION_CRISIS_EFFECT:0 "$ATTACKER|Y$は$TARGET|Y$の継承権をめぐって$DEFENDER|Y$と戦争を始めます\n"
  picked_wrong_incident_option:0 "国会で反対された"
  picked_right_incident_option:0 "国会で賛成された"
- NEEDS_MORE_DEV_THAN_EMPEROR:0 "$TARGET|Y$ needs to have equal or more Development than you($DEV|Y0$)."
+ NEEDS_MORE_DEV_THAN_EMPEROR:0 "$TARGET|Y$があなた（$DEV|Y0$）以上の開発度を持っている必要があります。"
  NEEDS_TO_NEIGHBOUR_EMPIRE:0 "$TARGET|Y$ needs to border the Holy Roman Empire."
  REICHSKRIEG_DEFENSE_OF_REALM_MODIFIER:0 "皇帝と選帝侯は神聖ローマ帝国の敵との戦争の際に、戦争税を無料で徴収できるようになります"
  defense_of_the_empire_modifier:0 "帝国の防衛"
@@ -1012,3 +1012,6 @@
  emperor_landfriede:0 "永久ラント平和令"
  ESTATE_NOT_ENOUGH_CROWNLAND:0 "直轄領が十分でない"
  EXPAND_EMPIRE_CB:0 ""
+ force_peasant_republic_desc:0 "[From.GetName] will become a peasant republic."
+ CB_ALLOWED_force_peasant_republic:0 "Enforce Peasant Rule"
+ PEACE_force_peasant_republic:0 "Enforce Peasant Rule"
