--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1252,7 +1252,7 @@
  mug_rajput_mansabdars_desc:0 "ラージプートの先祖からの故郷を征服した後に、彼ら貴族の忠誠心を得ることは、おそらく彼らに譲歩することを伴うだろう。彼らが我々に仕える限り、ラージプートの王朝にこれらの土地を与えることによって、おそらく当面は彼らの忠誠心を確保できるだろう。"
  mug_fatehpur_sikri_title:0 "ファテープル・シークリー"
  mug_fatehpur_sikri_desc:0 "我々の領域は多くの信仰の一つであり、始まり以来そうである。従って、単に同宗信徒達の忠誠に依存することは、常に問題外だ。それよりむしろ、より平和的にどんな相違も解決できるように、宗教的な議論や問答を促進せねばならない。\n大都市アグラの近くに新しい首都を建設しよう。それは我が王朝の全栄光を見せる感嘆たるムガルの建築様式であるが、我が帝国の多くの信仰を保つようにも設計されている。 国境内でジャイナ教徒やヒンドゥー教徒、キリスト教徒、ゾロアスター教徒、他の信仰の者との間で宗教的な問答をするために特別に作られた礼拝所は、我々が精神世界を完全に探検することをできるようにする。"
- mug_din_i_illah_title:0 "ディーニ・イラーヒー"
+ mug_din_i_illah_title:0 "ディン＝イ・イラーヒー"
  mug_din_i_illah_desc:0 "古き宗教に伴う虚飾を排除する時が来た。代わりに、[Root.Monarch.GetTitle]を神の地位に昇格させ、全ての上流貴族を彼の直接の門弟とせねばならない。この神聖な信仰は、親類や宗教よりも国家に仕える全ての者達との結束を一層強く形成することをできるようにする。"
  mug_conquer_central_deccan_title:0 "中央デカンの征服"
  mug_conquer_central_deccan_desc:0 "南のデカン高原は、常に強力な軍事伝統を持つ民族が存在している。今日に至るまで、その支配は何百もの小ポリーガル首長によって管理されている。また、南インドの東西の低地を支配するのにも自然な場所である。\nデリー・スルターン朝の時代からこの地域はインド北部の帝国の管理下となったのではなく、その後ずっと彼らはその支配を失い、北部と南部の間の本道は朽ち果てていった。デカン中央部を再征服し、マラバール海岸やコロマンデルの海岸の豊かな港を支える実用的な道路網を作ろう。"
