--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -25,7 +25,7 @@
  personality_options.736.b:0 "私は誰が我々の後援を受けるべきかを知っているだけだ。"
  personality_options.737.b:0 "これは彼のために絶好の機会となるだろう。"
  personality_options.738.a:0 "我々は彼を蚊帳の外に置き続けなければならない。"
- personality_options.740.a:0 "我々の[Root.Monarch.GetTitle]は、制度を悪用する最悪の方法のいくつかを終わらせる方法を知っている。"
+ personality_options.740.a:0 "我らが[Root.Monarch.GetTitle]は、制度を悪用するいくつかの最悪の方法の終わらせ方をご存知だ。"
  personality_options.740.b:0 "彼らが我々の利益を直接傷つけない限りは…"
  personality_options.741.a:0 "それは我々の[Root.Monarch.GetTitle]の多くのアイデアを広めるのにも最適だ。"
  personality_options.742.a:0 "我々にはただの兵士ではなく、より質の高い兵士たちが必要だ。"
